# pwgen

./: README.md  pyproject.toml
src/pwgen/: __main__.py  cli.py
